# learn-rs

./: .editorconfig  .env.local  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Readme.md  Taskfile.yml  rustfmt.toml
.cargo/: config.toml
.fleet/: settings.json
.github/workflows/: rust-clippy.yml  rust.yml
crates/basic/: readme.md
crates/rs-101/basic/: readme.md
crates/rs-cli/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-cms/: Cargo.toml  Taskfile.yml  diesel.toml  readme.md
crates/rs-cms-entity/: Cargo.toml
crates/rs-cms-migration/: Cargo.toml
crates/rs-cms/docs/: api.http  readme.md
crates/rs-cms/entity/src/: brand.rs  license_capacity.rs  order.rs  product_attribute.rs  product_category.rs  shop.rs  shop_bill_daily.rs  shop_product.rs  shop_setting_financial.rs  shop_verify.rs  user_auth_log.rs  user_license.rs  user_order_refund.rs  user_payment.rs
crates/rs-cms/migrations/2022-04-27-152651_init/: down.sql  up.sql
crates/rs-cms/migrations/2022-04-27-152651_posts/: down.sql  up.sql
crates/rs-cms/src/: main.rs
crates/rs-cms/src/dao/: mod.rs
crates/rs-cms/src/dao/cache/: cache.rs
crates/rs-cms/src/dao/db/: user.rs
crates/rs-cms/src/db/: schema.rs
crates/rs-cms/src/service/: hello.rs  mod.rs  user.rs
crates/rs-cms/src/utils/: db.rs  mod.rs  route.rs  shutdown.rs
crates/rs-ffi/: Cargo.toml  readme.md
crates/rs-ffi-core/: Cargo.toml  Taskfile.yml  cbindgen.toml  readme.md
crates/rs-ffi-core/src/: build.rs  echo.rs  http.rs  lib.rs
crates/rs-gui/: Taskfile.yml
crates/rs-gui/rs-tauri-vue/src-tauri/: Cargo.toml  tauri.conf.json
crates/rs-gui/rs-tauri-vue/src-tauri/locales/: en.yml
crates/rs-gui/rs-tauri-vue/src-tauri/migrations/: 20221029182115_init.sql
crates/rs-gui/rs-tauri-vue/src-tauri/src/command/: mod.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/config/: mod.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/ctx/: mod.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/menu/: sys.rs  tray.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/proto/model/: exchange.rs  mod.rs  todo.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/service/: app.rs  exchange.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/storage/: mod.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/storage/kv/: kv.rs  kv_enc.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/storage/sql/: todo.rs
crates/rs-gui/rs-tauri-vue/src-tauri/src/util/: locales.rs  mod.rs
crates/rs-gui/try-wry/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-gui/try-wry/examples/: try00.rs  try01.rs  try01b.rs  try02.rs  try03.rs  try04.rs
crates/rs-gui/try-wry/examples/streaming/: index.html
crates/rs-leetcode/: Cargo.toml  readme.md
crates/rs-os/: Taskfile.yml  readme.md
crates/rs-os/rs-cross/try-notify/: Cargo.toml  Taskfile.yml
crates/rs-os/rs-cross/try-notify/src/: run3.rs  run4.rs
crates/rs-pkg/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-pkg/src/: lib.rs
crates/rs-pkg/src/util/: mod.rs  path.rs
crates/rs-pkg/src/x/: mod.rs
crates/rs-pkg/src/x/storage/: kv.rs  kv_enc.rs  mod.rs  sql.rs
crates/rs-scripts/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-scripts/src/: lib.rs
crates/rs-scripts/src/commands/: binance.rs  eth.rs
crates/rs-scripts/src/core/binance/: account.rs  binance.rs  binance_async.rs  market.rs  wallet.rs
crates/rs-scripts/src/logic/: common.rs
crates/rs-scripts/src/modules/: eth.rs
crates/rs-scripts/src/modules/binance/: account.rs  binance_async.rs  market.rs
crates/rs-sql/: readme.md
crates/rs-sqlcipher/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-sqlcipher/src/sql/: mod.rs
crates/rs-tauri-vue/: .eslintrc-auto-import.json  .gitignore  README.md  Taskfile.yml  components.d.ts  package.json  pnpm-lock.yaml  vite.config.ts
crates/rs-tauri-vue/src-tauri/: Cargo.toml  tauri.conf.json
crates/rs-tauri-vue/src-tauri/icons/: icon.icns
crates/rs-tauri-vue/src-tauri/locales/: en.yml  fr.yml  zh-CN.yml  zh-HK.yml
crates/rs-tauri-vue/src-tauri/migrations/: 20221029182115_init.sql
crates/rs-tauri-vue/src-tauri/src/: main.rs  menu.rs
crates/rs-tauri-vue/src-tauri/src/command/: calc.rs  mod.rs  todo.rs
crates/rs-tauri-vue/src-tauri/src/config/: mod.rs
crates/rs-tauri-vue/src-tauri/src/ctx/: mod.rs
crates/rs-tauri-vue/src-tauri/src/menu/: mod.rs  sys.rs  tray.rs
crates/rs-tauri-vue/src-tauri/src/proto/model/: kv.rs  mod.rs
crates/rs-tauri-vue/src-tauri/src/service/: app.rs  mod.rs
crates/rs-tauri-vue/src-tauri/src/storage/: mod.rs
crates/rs-tauri-vue/src-tauri/src/storage/kv/: enc_kv.rs  key.rs  kv.rs  kv_enc.rs  microkv.rs  mod.rs  pickledb.rs
crates/rs-tauri-vue/src-tauri/src/storage/sql/: db.rs  mod.rs  todo.rs
crates/rs-tauri-vue/src-tauri/src/util/: app.rs  locales.rs  mod.rs
crates/rs-tonic/: Cargo.toml  Taskfile.yml  build.rs  readme.md
crates/rs-tonic/proto/helloworld/: helloworld.proto
crates/rs-tonic/src/: lib.rs
crates/rs-tonic/src/helloworld/: client.rs  server.rs
crates/rs-tonic/src/helloworld2/: client.rs  server.rs
crates/rs-tonic/src/pb/: helloworld.rs
crates/rs-try/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-try/entity/: Cargo.toml
crates/rs-try/entity/src/: todos.rs
crates/rs-try/fixtures/: cookiecutter.json
crates/rs-try/migration/: Cargo.toml
crates/rs-try/src/: lib.rs
crates/rs-try/src/git/: mod.rs
crates/rs-try/src/json/: mod.rs
crates/rs-try/src/orm/: mutation.rs  query.rs
crates/rs-try/src/sql/: mod.rs
crates/rs-volo/: Cargo.toml  Taskfile.yml  readme.md
crates/rs-volo/volo-gen/: Cargo.toml
crates/rs-volo/volo-gen/src/: lib.rs
crates/rust-by-example/: readme.md
crates/rust-programming-cookbook/: readme.md
crates/rust-programming-in-action/: Cargo.toml  readme.md
crates/try/rs-cms/entity/: Cargo.toml
crates/try/rs-cms/entity/src/: cart.rs  comment.rs  lib.rs  order_item.rs  order_template.rs  prelude.rs  product.rs  shop_employee.rs  shop_order.rs  shop_setting_delivery.rs  user.rs  user_3rd_account.rs  user_address.rs  user_auth.rs  user_license_active_log.rs  user_profile.rs
docs/: dev.md  readme.md  rust-core.md
(+201 files in other folders)
