[workspace]
members = [
    "crates/basic",
    "crates/rs-cms",
    "crates/rs-cms-entity",
    "crates/rs-cms-migration",
    "crates/rs-leetcode",
    "crates/rs-scripts",
    "crates/rs-ffi",
    "crates/rs-ffi-core",
    "crates/rust-by-example",
    "crates/rust-programming-in-action",
    "crates/rust-programming-cookbook",
    #    "packages/axum/axum-axum-v0.4.5",
]

exclude = [
    "tmp", # 不需要 ** 子目录
]



################################################################################
# release options:
#
# ref:
#   - https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
#   - https://github.com/tikv/tikv/blob/master/Cargo.toml#L307
#
################################################################################

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.release.package.rs-scripts]
strip = true        # Automatically strip symbols from the binary.
