[workspace]
members = [
    #
    # Rust Tutorial
    #
    "crates/rs-101/basic",
    "crates/rs-101/rust-by-example",
    "crates/rs-101/rust-programming-in-action",
    "crates/rs-101/rust-programming-cookbook",
    #
    #
    #
    "crates/rs-leetcode",
    "crates/rs-cli",
    "crates/rs-ffi/*",
    "crates/rs-os/rs-macos/try-notification",
    "crates/rs-os/rs-cross/try-notify",
    "crates/rs-gui/try-wry",
    #    "crates/rs-tonic",
    #    "crates/rs-tauri-vue/src-tauri",
    #    "crates/rs-sqlcipher",
]

exclude = [
    "tmp", # 不需要 ** 子目录
]



################################################################################
# release options:
#
# ref:
#   - https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
#   - https://github.com/tikv/tikv/blob/master/Cargo.toml#L307
#
################################################################################

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.release.package.rs-cli]
strip = true        # Automatically strip symbols from the binary.
