[package]
name = "rs-cms-migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rs_cms_migration"
path = "src/lib.rs"

[dependencies]
rs-cms-entity = { path = "../rs-cms-entity" }

[dependencies.sea-orm-migration]
version = "^0.8"
features = [
    # Enable following runtime and db backend features if you want to run migration via CLI
    "runtime-tokio-native-tls",
    "sqlx-mysql",
]
