[package]
name = "rs-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5" # web framework
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1" # logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["add-extension", "trace"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4", features = ["mysql"]  }  # orm