[package]
name = "rs-cms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5" # web framework
tokio = { version = "1.17", features = ["full"] }

# tracing:
tracing = "0.1" # logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# tower:
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["add-extension", "trace"] }

# libs:
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "1.4", features = ["mysql"] }  # orm
dotenvy = "0.15" # env vars

log = "0.4"               # log
pretty_env_logger = "0.4" # colorful log

# sqlx-postgres
sea-orm = { version = "^0.8", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros", "debug-print", "mock"] }
anyhow = "1.0"


# local crates:
rs-cms-entity = { path = "../rs-cms-entity" }
