[package]
name = "rs-cms"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    "entity", # sea-orm
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5" # web framework
axum-macros = "0.2"
tokio = { version = "1.17", features = ["full"] }

# tracing:
tracing = "0.1" # logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# tower:
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3", features = ["add-extension", "trace"] }

# libs:
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

diesel = { version = "1.4", features = ["mysql"] }  # orm
dotenvy = "0.15" # env vars

#log = "0.4"               # log
#pretty_env_logger = "0.4" # colorful log

# sqlx-postgres # fix not add mock
# async orm:
sea-orm = { version = "0.9", features = ["sqlx-all", "runtime-tokio-rustls", "macros", "debug-print"] }
anyhow = "1"

# local crates:
rs-entity = { path = "entity" }
#rs-cms-migration = { path = "../rs-cms-migration" }
