[package]
name = "rs-pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [workspace]
# members = []


[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"

serde_json = "1"
serde = { version = "1", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

once_cell = "1"
parking_lot = "0"

# encrypted kv:
microkv = "0"

# kv:
pickledb = "0"

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
sqlx-rt = "0"
#sqlx-macros = "0.6"
#sqlx-macros = { version = "^0.6" }
