[package]
name = "rs-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

################################################################################
# 自定义 bin script 名称 和 源码文件对应关系
################################################################################

[[bin]]
name = "rs-scripts"
path = "src/bin/main.rs"


#
# cli usage:
#   -  cargo run --bin rs-eth-scanner -- scan "http://abc.url" "0xxxxx" "deposit" "100"
#
[[bin]]
name = "rs-eth-scanner"
path = "src/bin/eth.rs"

[[bin]]
name = "discord-bot"
path = "src/bin/discord_bot.rs"

[[bin]]
name = "rs-binance"
path = "src/bin/binance.rs"

[[bin]]
name = "rs-tui"
path = "src/bin/tui.rs"


################################################################################
# release options:
################################################################################

[profile.dev]
# Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

################################################################################
# dependencies:
################################################################################

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
web3 = "0.18.0"
tokio = "1.17.0"
#serenity = "0.11.1" # discord api
serenity = { version = "0.11.1", default-features = true, features = ["client", "gateway", "rustls_backend", "model"] }
binance = "0.18.4"   # binance api
tui = "0.18.0"       # terminal ui
crossterm = "0.23.2" # terminal ui required
chrono = "0.4.19"    # time format
chrono-tz = "0.6.1"  # time zone
log = "0.4"               # log
pretty_env_logger = "0.4" # colorful log
