[package]
name = "rs-sqlcipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# sqlx:
[[bin]]
name = "rs-sql"
path = "bin/sqlx.rs"


[workspace]
members = []


[dependencies]
# TODO X: 使用内置版本, 编译简单
libsqlite3-sys = { version = "0", features = ["bundled-sqlcipher-vendored-openssl"] }

# Tokio:
sqlx = { version = "^0.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1", features = ["full"] }

anyhow = "1.0"
structopt = "0.3"
futures = "0.3"
