[package]
name = "rs-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


################################################################################


[[bin]]
name = "rs-git"
path = "bin/git.rs"


[[bin]]
name = "rs-tpl"
path = "bin/template.rs"


################################################################################

#
# TODO X: 注意, 设置成根目录, 避免导入工程就触发 build.
#   本repo 用于测试各种包用法, 属于临时代码.
#
[workspace]
members = []


################################################################################

[dependencies]
