[package]
name = "rs-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


################################################################################


# git 操作:
[[bin]]
name = "rs-git"
path = "bin/git.rs"

# 模板引擎(jinja2):
[[bin]]
name = "rs-tpl"
path = "bin/template.rs"

# 目录遍历:
[[bin]]
name = "rs-dir"
path = "bin/dir.rs"

# 文件读写:
[[bin]]
name = "rs-file"
path = "bin/file.rs"

# 进度条:
[[bin]]
name = "rs-progress"
path = "bin/progress.rs"

# 脚手架工具:
[[bin]]
name = "rs-gent"
path = "bin/gent.rs"

# sqlx: CRUD, 自带 cli + migration 工具
[[bin]]
name = "rs-sql"
path = "bin/sql.rs"


################################################################################

#
# TODO X: 注意, 设置成根目录, 避免导入工程就触发 build.
#   本repo 用于测试各种包用法, 属于临时代码.
#
[workspace]
members = []


################################################################################

[dependencies]
git2 = "0.15"

# template engine:
askama = "0.11"

# os directory:
walkdir = "2"
fs_extra = "1.2"

# cli progress bar:
indicatif = "0.17"

# json:
serde_json = "1.0"

# sqlx:
# tokio + rustls
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
structopt = "0.3"
