[package]
name = "volo_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


anyhow = "1"
async-trait = "0.1"
lazy_static = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
prost = "0.11"

pilota = "*"
volo = "*"        # we recommend to use the latest framework version for new features and bug fixes
volo-grpc = "*"  # we recommend to use the latest framework version for new features and bug fixes

# local crates:
volo-gen = { path = "./volo-gen" }


[build-dependencies]
volo-build = "*" # we recommend to use the latest framework version for new features and bug fixes

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
#resolver = "2"
