[package]
name = "try-wry"
version = "0.1.0"
edition = "2024"


# multiwebview
[[bin]]
name = "t01"
path = "examples/try01.rs"

# gtk_multiwebview
[[bin]]
name = "t01b"
path = "examples/try01b.rs"

# multiwindow
[[bin]]
name = "t02"
path = "examples/try02.rs"


[dependencies]
tao = "0.32.6"
winit = "0.30.9"
wry = "0.50.3"
