[package]
name = "try-wry"
version = "0.1.0"
edition = "2024"


# multiwebview
[[bin]]
name = "t01"
path = "examples/try01.rs"

# gtk_multiwebview
[[bin]]
name = "t01b"
path = "examples/try01b.rs"

# multiwindow
[[bin]]
name = "t02"
path = "examples/try02.rs"

# multiwindow
[[bin]]
name = "t03"
path = "examples/try03.rs"


[dependencies]
getrandom = "0.3.1"
http = "1.2.0"
http-range = "0.1.5"
percent-encoding = "2.3.1"
pollster = "0.4.0"
tao = "0.32.6"
wgpu = "24.0.1"
winit = "0.30.9"
wry = "0.50.3"
