[package]
name = "tauri_vue_template"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ville Säävuori"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
default-run = "tauri_vue_template"
edition = "2021"
rust-version = "1.57"



#
# TODO X: 注意, 不作为上层 workspace 的子项目.
#
#[workspace]
#members = []



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1.0.145", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
window-shadows = "0.2"
window-vibrancy = "0.3"


[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
cocoa = "0.24"

# sqlite
sqlx = { version = "^0.6", features = ["runtime-tokio-native-tls", "sqlite"] }


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
