[package]
name = "tauri_vue_template"
version = "0.1.0"
description = "A Tauri App"
authors = ["Ville Säävuori"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
default-run = "tauri_vue_template"
edition = "2021"
rust-version = "1.57"



#
# TODO X: 注意, 不作为上层 workspace 的子项目.
#
#[workspace]
#members = []



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["api-all", "system-tray"] }
window-shadows = "0.2"
window-vibrancy = "0.3"


[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
cocoa = "0.24"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# i18n
once_cell = "1"
rust-i18n = "0"
sys-locale = "0"

# sqlite
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
# tag = "v0.1.0" Not available yet
features = ["sqlite"] # or "postgres", or "mysql"

# i18n
[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN", "zh-HK", "fr"]

# The default locale, default: "en".
# default-locale = "en"

# Path for your translations YAML file, default: "locales".
# load-path = "locales"


# encrypted kv:
microkv = "0"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
