[package]
name = "tauri_vue_template"
version = "0.1.0"
description = "A Tauri App"
authors = ["Henry Huang"]
license = "MIT"
repository = "https://github.com/Uninen/tauri-vue-template"
default-run = "tauri_vue_template"
edition = "2021"
rust-version = "1.57"



#
# TODO X: 注意, 不作为上层 workspace 的子项目.
#   - fix: 编译报错(误报)
#       - https://github.com/launchbadge/sqlx/issues/1604
[workspace]
members = []


################################################################################


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "1", features = ["api-all", "system-tray"] }
window-shadows = "0.2"
window-vibrancy = "0.3"


[target."cfg(any(target_os = \"ios\", target_os = \"macos\"))".dependencies]
cocoa = "0.24"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

once_cell = "1"
parking_lot = "0"

# i18n
rust-i18n = "1"
sys-locale = "0"

# encrypted kv:
microkv = "0"

# kv:
pickledb = "0"

# sqlx, for rust use:
#libsqlite3-sys = { version = "0", features = ["bundled"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
sqlx-rt = "0"
#sqlx-macros = "0.6"
#sqlx-macros = { version = "^0.6" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# debug tool:
console-subscriber = "0"

################################################################################

#
# workspace internal dependencies:
#
rs-pkg = { path = "../../rs-pkg" }


################################################################################

# sqlite, for js/ts use:
[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/tauri-plugin-sql"
# tag = "v0.1.0" Not available yet
features = ["sqlite"] # or "postgres", or "mysql"

# i18n
[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "zh-CN", "zh-HK", "fr"]

# The default locale, default: "en".
# default-locale = "en"

# Path for your translations YAML file, default: "locales".
# load-path = "locales"

################################################################################

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
