[package]
name = "try-notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
chrono = { version = "0.4", optional = true }


#
# cli usage:
#   - cargo run -- --bin run2
#
[[bin]]
name = "run2"
path = "src/run2.rs"

[[bin]]
name = "run3"
path = "src/run3.rs"

# sound
[[bin]]
name = "run4"
path = "src/run4.rs"
