[package]
name = "rs-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9", features = ["sqlx-all", "runtime-tokio-rustls", "macros", "debug-print"] }
serde = { version = "1", features = ["derive"] }
